foo-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: foo
  type: NodePort
