foo-basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-basic-ingress
spec:
  defaultBackend:
    service:
      name: foo
      port:
        number: 8080
